syntax = "proto3";
package storagepb;

option go_package = "./internal/blob/storagepb";


import "internal/blob/storagepb/object_info.proto";
import "internal/blob/storagepb/object_chunk.proto";

message PutObjectRequest{
    ObjectInfo info = 1;
    ObjectChunk chunk = 2;
}
