syntax = "proto3";
package storagepb;

option go_package = "./internal/blob/storagepb";


import "internal/blob/storagepb/object_info.proto";

message PutObjectResponse {
    ObjectInfo info = 1;
}