// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative internal/blob/storagepb/*.proto

syntax = "proto3";
package storagepb;

import "internal/blob/storagepb/put_object_request.proto";
import "internal/blob/storagepb/put_object_response.proto";

// option go_package = "github.com/odit-bit/internal/blob/storagepb";
option go_package = "./internal/blob/storagepb";



service StorageService {
    rpc PutObject(stream PutObjectRequest) returns (PutObjectResponse);
}



// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative internal/blob/storagepb/
